crates/fidius-macro/tests/compile_fail/missing_version.stderr
error: missing `version` attribute
  --> tests/compile_fail/missing_version.rs:17:1
   |
17 | #[plugin_interface(buffer = PluginAllocated)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `plugin_interface` (in Nightly builds, run with -Z macro-backtrace for more info)
